--- a/newsletter.css
+++ b/newsletter.css
@@ -1,9 +1,9 @@
 
 footer {
-	background-color: #037Ef3;
+	background-color: #52565E ;
 	padding: 10px 10px 10px 10px;
-	border: 2px solid #037Ef3;
-	border-radius: 10px;
+	border: 2px solid #00C16E;
+	border-radius: ;
 	text-transform: capitalize;
 	font-weight: bold;
 	text-align: center;
@@ -14,15 +14,17 @@ footer {
 	
 
 h1,h2,h3 {
-	color: #037Ef3;
-	background-color: #fed330;
-	border: 2px solid #037Ef3;
+	color:#00C16E ;
+	background-color: ;
+	border: 2px solid #00C16E;
+	text-align: center;
 			
 	}
 
 * {
 	font-family:"Lato",sans-serif;
 	box-sizing: border-box;
+	line-height: 30px;
 
 
 	}
@@ -32,29 +34,32 @@ ul,a {
 	}
 
 .thebox {
-	background-color: #F85A40;
-	border: 2px solid #CACCD1;
-	border-radius: 10px;
-	font-weight: bold;
+	background-color: #52565E;
+	border: 2px solid #00C16E;
+	border-radius: ;
+	font-weight: ;
 	text-transform: initial;
 	color: #F3F4F7;
+	
 }
 
 .world {
-	background-color: #FFC845;
-	text-align: center;
-	border: 2px solid #CACCD1;
-	border-radius: 10px;
-	font-weight: bold;
+	background-color: #52565E;
+	text-align: initial;
+	border: 2px solid #00C16E;
+	border-radius: ;
+	font-weight: ;
 	padding: 10px 10px 10px 10px;
-	color: black;
+	color: #F3F4F7;
+	
 
 }
 
 .blocgris {
-	background-color: #dfe4ea;
+	background-color: ;
 	border-bottom: 1px inset black;
-	font-weight: bold;
+	font-weight: ;
+	
 }
 
 
