--- a/newsletter.css
+++ b/newsletter.css
@@ -5,10 +5,11 @@ footer {
 	border: 2px solid #00C16E;
 	border-radius: ;
 	text-transform: capitalize;
-	font-weight: bold;
 	text-align: center;
 	font-size: 20px;
 	color: #F3F4F7;
+	margin-top: 20px;
+	margin-bottom: 20px;
 
 	}
 	
@@ -24,7 +25,7 @@ h1,h2,h3 {
 * {
 	font-family:"Lato",sans-serif;
 	box-sizing: border-box;
-	line-height: 40px;
+	line-height: 30px;
 
 
 	}
@@ -35,19 +36,24 @@ ul,a {
 
 .thebox {
 	background-color: #52565E;
-	border: 2px solid #00C16E;
+	border: 2px solid #F85A40;
 	border-radius: ;
 	font-weight: ;
-	text-transform: initial;
 	color: #F3F4F7;
+	padding: 10px 10px 10px 10px;
 	
+}
+
+.blocthebox{
+	text-align: center;
+	color: #F85A40;
+	font-size: 20px;
+	padding: 10px 10px 10px 10px;
 }
 
 .world {
 	background-color: #52565E;
-	text-align: initial;
-	border: 2px solid #00C16E;
-	border-radius: ;
+	border: 2px solid #F48924;
 	font-weight: ;
 	padding: 10px 10px 10px 10px;
 	color: #F3F4F7;
@@ -68,21 +74,53 @@ ul,a {
 }
 
 .LC {
+	margin-top: 30px;
 	background-color: #52565E;
-	border: 2px solid #00C16E;
-	padding: 10px 10px 180px 50px ;
+	border: 0px solid #00C16E;
 	width: 100%;
 
 	}
 .imageLC {
-
-	width: 30%;
-	float: left;
-	margin: 0px 60px 0px 0px ;
+	width: 100%;
 }
 
 .listeLC {
-	margin: 0px;
+	border-bottom: 2px solid #00C16E;
+	margin-top: 0px;
 	font-size: 20px;
 	color: #F3F4F7;
+	padding: 10px 10px 10px 40px;
+}
+
+
+.blocLC-titre {
+	border-top: 2px solid #00C16E;
+	padding: 10px 10px 10px 10px;
+	color: #F3F4F7;
+	text-align: center;
+	font-size: 30px;
+}
+
+.blocvideo1 {
+	border: 1px solid #037Ef3;
+	text-align: center;
+	color: #037Ef3;
+	font-size: 20px;
+	padding: 10px 10px 10px 10px;
+}
+
+.blocvideo2 {
+	text-align: center;
+	color: #F48924;
+	font-size: 20px;
+	padding: 10px 10px 10px 10px;
+
+}
+
+.blocvideo3 {
+	text-align: center;
+	color: #037Ef3;
+	font-size: 20px;
+	padding: 10px 10px 10px 10px;
+	margin-top: 10px;
 }
