--- a/projet-bloc.css
+++ b/projet-bloc.css
@@ -25,14 +25,16 @@ h2,h3 {
 	font-weight: initial;
 			
 	}
-
+body {
+	width: 60%;
+	margin: auto;
+}
 * {
 	font-family:"Lato",sans-serif;
 	box-sizing: border-box;
 	line-height: 50px;
 	font-size: 25px;
-	margin-left: 50px;
-	margin-right: 50px;
+	
 
 
 	}
