--- a/projet-bloc.css
+++ b/projet-bloc.css
@@ -26,7 +26,7 @@ h2,h3 {
 			
 	}
 body {
-	width: 70%;
+	width: 65%;
 	margin: auto;
 }
 * {
@@ -44,6 +44,7 @@ body {
 	border: 2px solid #52565E;
 	margin-top: 40px;
 	margin-bottom: 40px;
+	color:  #52565E;
 }
 .bloc-intro {
 	border: 2px solid #52565E;
@@ -123,6 +124,7 @@ body {
 	margin-right: 0px;
 	margin-bottom: 40px;
 	margin-top: 40px;
+	text-align: center;
 	
 }
 
@@ -133,6 +135,13 @@ body {
 	margin-bottom: 20px;
 
 }
+.bloc-ef {
+	border: 2px solid #003940;
+	text-align: ;
+	color: #003940;
+	margin-bottom: 40px;
+	margin-top: 40px;
+} 
 
 .bloc-news {
 	border: 2px solid #52565E;
